[gd_scene load_steps=30 format=2]

[ext_resource path="res://source/Player.gd" type="Script" id=1]
[ext_resource path="res://source/PlayerUtil.gd" type="Script" id=2]
[ext_resource path="res://source/InputAction.gd" type="Script" id=3]
[ext_resource path="res://source/ai/AI.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/png/Sprite.png" type="Texture" id=5]
[ext_resource path="res://assets/BebasNeue.otf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/png/PanicKid.png" type="Texture" id=7]
[ext_resource path="res://assets/png/Tongue.png" type="Texture" id=8]
[ext_resource path="res://assets/sfx/Tap.ogg" type="AudioStream" id=9]
[ext_resource path="res://assets/sfx/CartoonJump.ogg" type="AudioStream" id=10]
[ext_resource path="res://assets/sfx/screams/Crowd.ogg" type="AudioStream" id=11]
[ext_resource path="res://source/MovementVisualizer.tscn" type="PackedScene" id=12]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 15, 5 )

[sub_resource type="CapsuleShape2D" id=2]

custom_solver_bias = 0.0
radius = 15.0
height = 15.0

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 20, 10 )

[sub_resource type="Animation" id=4]

length = 1.0
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.7, 0.8, 0.9, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -30 ), Vector2( 0, -150 ), Vector2( 0, -140 ), Vector2( 0, -30 ), Vector2( 0, -25 ), Vector2( 0, -30 ), Vector2( 0, -30 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.7, 0.8, 0.9, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.3, 0.6 ), Vector2( 0.3, 0.45 ), Vector2( 0.3, 0.475 ), Vector2( 0.3, 0.6 ), Vector2( 0.35, 0.5 ), Vector2( 0.3, 0.6 ), Vector2( 0.3, 0.6 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Shadow:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.4, 0.15 ), Vector2( 0.1, 0.05 ), Vector2( 0.1, 0.05 ), Vector2( 0.45, 0.15 ), Vector2( 0.5, 0.2 ), Vector2( 0.4, 0.15 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TouchArea/Shape:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 2,
"values": [ false, true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:collision_layer")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 0.65 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 2,
"values": [ 17, 16, 17 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:just_landed")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.55, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 2,
"values": [ false, true, false ]
}

[sub_resource type="Animation" id=5]

length = 1.0
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.6, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -30 ), Vector2( 0, -25 ), Vector2( 0, -30 ), Vector2( 0, -150 ), Vector2( 0, -30 ), Vector2( 0, -25 ), Vector2( 0, -30 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.6, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.3, 0.6 ), Vector2( 0.35, 0.5 ), Vector2( 0.3, 0.6 ), Vector2( 0.3, 0.8 ), Vector2( 0.3, 0.6 ), Vector2( 0.35, 0.5 ), Vector2( 0.3, 0.6 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Shadow:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.6, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.4, 0.15 ), Vector2( 0.5, 0.2 ), Vector2( 0.45, 0.15 ), Vector2( 0.1, 0.05 ), Vector2( 0.45, 0.15 ), Vector2( 0.5, 0.2 ), Vector2( 0.4, 0.15 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TouchArea/Shape:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 2,
"values": [ false, true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:collision_layer")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 2,
"values": [ 17, 16, 17 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:just_landed")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.75, 0.95 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 2,
"values": [ false, true, false ]
}

[sub_resource type="GDScript" id=6]

script/source = "extends Node2D

onready var player = get_parent()
onready var ScreamSound = $\"../ScreamSound\"

func _physics_process(delta):
	_flip_crocodile()

func _flip_crocodile():
	var moving_right = player.velocity.x > 0 and sign(player.velocity.x) == sign(player.heading.x)
	
	if player.is_crocodile():
		$\"../Sprite/Panic\".hide()
		_reset_Sprite_color()
		if player.is_close_to_at_least_3_others():
			ScreamSound.play_crowd_screaming()
		else:
			ScreamSound.stop()
	elif player.is_panicking():
		ScreamSound.play_random_individual()
		if moving_right:
			$AnimationPlayer.play(\"PanicRight\")
		else:
			$AnimationPlayer.play(\"PanicLeft\")
	else:
		$AnimationPlayer.play(\"Normal\")
		_reset_Sprite_color()

func _play_animation_if_not_playing(animation_name):
	var current_animation  = $AnimationPlayer.get_current_animation()
	if not $AnimationPlayer.is_playing() or current_animation != animation_name:
		$AnimationPlayer.play(animation_name)
	elif player.frozen:
		$AnimationPlayer.stop()

func _reset_Sprite_color():
	$'../Sprite'.self_modulate = player.color"

[sub_resource type="Animation" id=10]

length = 0.01
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite/Panic:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=11]

length = 0.01
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite/Panic:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Sprite/Panic/Tongue:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Sprite/Panic:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Sprite:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=12]

length = 0.01
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite/Panic:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Sprite/Panic/Tongue:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Sprite/Panic:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Sprite:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="DynamicFont" id=13]

size = 40
use_mipmaps = true
use_filter = false
font_data = ExtResource( 6 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=14]

size = 40
use_mipmaps = false
use_filter = false
font_data = ExtResource( 6 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="CircleShape2D" id=15]

custom_solver_bias = 0.0
radius = 150.0

[sub_resource type="GDScript" id=16]

script/source = "extends Timer

onready var player = get_parent()
onready var label = player.get_node(\"TimerLabel\")
onready var jump_duration = player.get_node(\"JumpAnimation\").get_animation(\"Jump\").get_length()

var jumped = false

func _ready():
	label.show()

func start():
	.start()
	player.frozen = true
	jumped = false

func _process(delta):
	if time_left > 0:
		label.text = String(time_left + 1).substr(0, 1)
	else: label.text = \"\"
	
	var frozen = player.frozen
	if label.text == \"4\" or label.text == \"3\" and not frozen:
		print(\"Gotcha! %s\" % label.text)
		print(\"Paused: %s\" % paused)
		print(\"Stopped: %s\" % is_stopped())
		player.frozen = true
	
	if label.text == \"4\":
		paused = false
	
	if time_left < jump_duration / 2 and player.is_crocodile() and not jumped:
		jumped = true
		player.break_unfrozen()"

[sub_resource type="AudioStreamRandomPitch" id=17]

audio_stream = ExtResource( 10 )
random_pitch = 1.25

[sub_resource type="AudioStreamRandomPitch" id=20]

audio_stream = ExtResource( 11 )
random_pitch = 1.25

[sub_resource type="GDScript" id=18]

script/source = "extends AudioStreamPlayer2D

var sounds = [load(\"res://assets/sfx/screams/FunnyScream.ogg\"), load(\"res://assets/sfx/screams/MaleScream.ogg\"), load(\"res://assets/sfx/screams/FemaleScream.ogg\")]

var individual_scream
var crowd_scream = load(\"res://assets/sfx/screams/Crowd.ogg\")

func choose_random_sound():
	individual_scream = sounds[randi() % sounds.size()]

func play_crowd_screaming():
	if playing: return
	set_audio(crowd_scream)
	play()

func play_random_individual():
	if playing: return
	set_audio(individual_scream)
	play()

func set_audio(audio):
	stream.audio_stream = audio

func stop():
	if playing:
		.stop()"

[sub_resource type="DynamicFont" id=19]

size = 40
use_mipmaps = false
use_filter = false
font_data = ExtResource( 6 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Player" type="KinematicBody2D" groups=[
"Players",
]]

input_pickable = false
collision_layer = 17
collision_mask = 0
collision/safe_margin = 1.0
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]
pushing_out = false
just_landed = false
color = Color( 1, 1, 1, 1 )

[node name="Util" type="Node2D" parent="." index="0"]

visible = false
script = ExtResource( 2 )

[node name="Shape" type="CollisionShape2D" parent="." index="1"]

visible = false
position = Vector2( 0, -2 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="CrocodileShape" type="CollisionShape2D" parent="." index="2"]

visible = false
position = Vector2( 0.2, -0.2 )
rotation = 1.5708
shape = SubResource( 2 )
disabled = true
_sections_unfolded = [ "Transform" ]

[node name="TouchArea" type="Area2D" parent="." index="3"]

visible = false
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision", "Pickable", "Transform" ]

[node name="Shape" type="CollisionShape2D" parent="TouchArea" index="0"]

scale = Vector2( 1.1, 1 )
shape = SubResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="JumpAnimation" type="AnimationPlayer" parent="." index="4"]

root_node = NodePath("..")
autoplay = "Grounded"
playback_process_mode = 1
playback_default_blend_time = 0.1
playback_speed = 1.25
anims/Bounce = SubResource( 4 )
anims/Jump = SubResource( 5 )
blend_times = [  ]
autoplay = "Grounded"
_sections_unfolded = [ "Playback Options" ]

[node name="InputAction" type="Node2D" parent="." index="5"]

visible = false
position = Vector2( 0, -40 )
script = ExtResource( 3 )
_sections_unfolded = [ "Visibility" ]

[node name="AI" parent="." index="6" instance=ExtResource( 4 )]

visible = false

[node name="SpriteFlipper" type="Node2D" parent="." index="7"]

visible = false
script = SubResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="SpriteFlipper" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Normal = SubResource( 10 )
anims/PanicLeft = SubResource( 11 )
anims/PanicRight = SubResource( 12 )
blend_times = [  ]
autoplay = ""

[node name="Shadow" type="Sprite" parent="." index="8"]

modulate = Color( 0, 0, 0, 0.160235 )
show_behind_parent = true
scale = Vector2( 0.45, 0.15 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform", "Z" ]

[node name="Sprite" type="Sprite" parent="." index="9"]

show_behind_parent = true
position = Vector2( 0, -30 )
scale = Vector2( 0.3, 0.6 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Animation", "Transform", "Z" ]

[node name="CoinLabel" type="Label" parent="Sprite" index="0"]

anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -192.0
margin_right = -119.0
margin_bottom = -144.0
rect_scale = Vector2( 2.5, 1.25 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 13 )
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="NameTag" type="Label" parent="Sprite" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -50.0
margin_top = -192.0
margin_right = -10.0
margin_bottom = -144.0
rect_scale = Vector2( 2.5, 1.2 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 14 )
text = "P0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Rect", "custom_fonts" ]

[node name="Panic" type="Sprite" parent="Sprite" index="2"]

visible = false
position = Vector2( -125, -75 )
scale = Vector2( 1.25, 0.625 )
texture = ExtResource( 7 )
centered = false
_sections_unfolded = [ "Transform" ]

[node name="Tongue" type="Sprite" parent="Sprite/Panic" index="0"]

show_behind_parent = true
position = Vector2( 70, 90 )
texture = ExtResource( 8 )
centered = false

[node name="PanicRadius" type="Area2D" parent="." index="10"]

editor/display_folded = true
visible = false
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 0
audio_bus_override = false
audio_bus_name = "Master"

[node name="Shape" type="CollisionShape2D" parent="PanicRadius" index="0"]

shape = SubResource( 15 )

[node name="FreezeTimer" type="Timer" parent="." index="11"]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false
script = SubResource( 16 )

[node name="TapSound" type="AudioStreamPlayer2D" parent="." index="12"]

visible = false
stream = ExtResource( 9 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="JumpSound" type="AudioStreamPlayer2D" parent="." index="13"]

visible = false
stream = SubResource( 17 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="ScreamSound" type="AudioStreamPlayer2D" parent="." index="14"]

visible = false
stream = SubResource( 20 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Screams"
area_mask = 1
script = SubResource( 18 )

[node name="TimerLabel" type="Label" parent="." index="15"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -8.0
margin_top = -40.0
margin_right = 8.0
margin_bottom = 8.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 19 )
text = "3"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Visibility", "custom_fonts" ]

[node name="MovementVisualizer" parent="." index="16" instance=ExtResource( 12 )]

visible = false

[connection signal="bounce" from="." to="JumpSound" method="play"]

[connection signal="jump" from="." to="JumpSound" method="play"]

[connection signal="jump" from="." to="JumpAnimation" method="play" binds= [ "Jump" ]]

[connection signal="turning_crocodile" from="." to="." method="start_freezing"]

[connection signal="turning_crocodile" from="." to="CrocodileShape" method="set_disabled" binds= [ false ]]

[connection signal="turning_normal" from="." to="CrocodileShape" method="set_disabled" binds= [ true ]]

[connection signal="turning_normal" from="." to="SpriteFlipper/AnimationPlayer" method="play" binds= [ "PanicLeft" ]]

[connection signal="unfrozen_as_crocodile" from="." to="." method="_tag_overlapping_player"]

[connection signal="body_entered" from="TouchArea" to="." method="tag_crocodile"]

[connection signal="timeout" from="FreezeTimer" to="." method="_set_frozen" binds= [ false ]]


